--- a/results/tables/regression_table_additional_controls.html
+++ b/results/tables/regression_table_additional_controls.html
@@ -1,5 +1,5 @@
 Table 2: The OLS regression models with additional control variables<br><table style="text-align:center"><tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="3"><em>Dependent variable: log_avg_incoming_delay</em></td></tr><tr><td style="text-align:left"></td><tr><td></td><td colspan="1">Total Throughput Control</td><td colspan="1">Average Neighboring Delay</td><td colspan="1">Christmas Period</td></tr><tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>
+<tr><td style="text-align:left"></td><td colspan="3"><em>Dependent variable: log_avg_incoming_delay</em></td></tr><tr><td style="text-align:left"></td><tr><td></td><td colspan="1">(6)</td><td colspan="1">(7)</td><td colspan="1">(8)</td></tr>
 <tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
 
 <tr><td style="text-align:left">Intercept</td><td>1.654<sup>***</sup></td><td>0.844<sup>***</sup></td><td>0.826<sup>***</sup></td></tr>
